add aboutUs/marketInfo/lastestNews scss

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -3,3 +3,9 @@
 @import "~bootstrap/scss/bootstrap";
 
 @import "./dashboard";
+@import "./sass/custom";
+@import "./sass/home";
+@import "./sass/productList";
+@import ".//sass//footer";
+@import "./sass/lastestNews";
+@import "./sass/marketInfo";
