--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -1,4 +1,3 @@
-$custom:       #7b776c !default; 
 $custom-gray:  #f4f4f4 !default;
 $custom-white: #ffffff !default;
 $custom-yellow:#f5b937 !default; 
@@ -8,3 +7,5 @@ $content:      #eee6c7 !default;
 $sweet :       #ffc2c3 !default;
 $rose :        #fe7773 !default;
 $red:          #e81e25 !default;
+
+$logo-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
