--- a/src/assets/sass/_lastestNews.scss
+++ b/src/assets/sass/_lastestNews.scss
@@ -1,4 +1,11 @@
 .latestNews {
+  .title {
+    letter-spacing: .2em;
+    text-transform: uppercase;
+    font-size: 1.2em;
+    color: #555;
+    text-align: center;
+  }
   .news-img {
     position: relative;
     display: flex;
