update image, fixed bug

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -9,4 +9,5 @@
 @import ".//sass//footer";
 @import "./sass/lastestNews";
 @import "./sass/marketInfo";
+@import "./sass/aboutUs";
 @import "./sass/navbar";
