--- a/src/assets/sass/_lastestNews.scss
+++ b/src/assets/sass/_lastestNews.scss
@@ -19,7 +19,7 @@
     &::after {
       content: '';
       position: absolute;
-      background-image: url(https://images.unsplash.com/photo-1506727407824-5c3efd2127e4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+      background-image: url('~@/assets/images/lastest-header-1.jpg');
       top: 0;
       left: 0;
       bottom: 0;
