--- a/src/assets/sass/_marketInfo.scss
+++ b/src/assets/sass/_marketInfo.scss
@@ -35,7 +35,7 @@
     height: 300px;
   }
   .banner-img {
-    background-image: url(https://images.unsplash.com/photo-1534986136417-89b28be6a379?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+    background-image: url('~@/assets/images/marketInfo-header-1.jpg');
   }
   .jumbotron-bg-cover {
     background-size: cover;
